--- a/static_webpages/writings.dev/index.html
+++ b/static_webpages/writings.dev/index.html
@@ -4,6 +4,14 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300..1000&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Imitation Site</title>
 </head>
@@ -43,7 +51,7 @@
 
     <div class="cards-container">
       <div class="card">
-        <img src="quill.png">
+        <img src="splash.jpeg">
         <h3>Build continuous integration pipelines with GitHub Actions</h3>
         <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
           applications.</p>
@@ -54,7 +62,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="quill.png">
+        <img src="splash.jpeg">
         <h3>Build continuous integration pipelines with GitHub Actions</h3>
         <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
           applications.</p>
@@ -63,8 +71,9 @@
           <p>•</p>
           <p>DevOps</p>
         </div>
-      </div><div class="card">
-        <img src="quill.png">
+      </div>
+      <div class="card">
+        <img src="splash.jpeg">
         <h3>Build continuous integration pipelines with GitHub Actions</h3>
         <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
           applications.</p>
