Finished writings.dev static version

--- a/static_webpages/writings.dev/index.html
+++ b/static_webpages/writings.dev/index.html
@@ -46,45 +46,166 @@
       <p>Architecture</p>
       <p>Scalability</p>
       <p>Explainers</p>
-      <p>Transformers</p>
     </div>
 
     <div class="cards-container">
       <div class="card">
-        <img src="splash.jpeg">
-        <h3>Build continuous integration pipelines with GitHub Actions</h3>
-        <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-          applications.</p>
-        <div class="card-footer">
-          <p>June 24, 2022</p>
-          <p>•</p>
-          <p>DevOps</p>
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
         </div>
       </div>
       <div class="card">
-        <img src="splash.jpeg">
-        <h3>Build continuous integration pipelines with GitHub Actions</h3>
-        <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-          applications.</p>
-        <div class="card-footer">
-          <p>June 24, 2022</p>
-          <p>•</p>
-          <p>DevOps</p>
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
         </div>
       </div>
       <div class="card">
-        <img src="splash.jpeg">
-        <h3>Build continuous integration pipelines with GitHub Actions</h3>
-        <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-          applications.</p>
-        <div class="card-footer">
-          <p>June 24, 2022</p>
-          <p>•</p>
-          <p>DevOps</p>
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <img src="splash.jpeg">
+          <h3>Build continuous integration pipelines with GitHub Actions</h3>
+          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
+            applications.</p>
+          <div class="card-footer">
+            <p>June 24, 2022</p>
+            <p>•</p>
+            <p>DevOps</p>
+          </div>
         </div>
       </div>
     </div>
 
+    <div class="pagination">
+      <div class="pagination-button">
+        <p>Previous</p>
+      </div>
+      <div class="pagination-button">
+        <p>1</p>
+      </div>
+      <div class="pagination-button current-page">
+        <p>2</p>
+      </div>
+      <div class="pagination-button">
+        <p>3</p>
+      </div>
+      <div class="pagination-button">
+        <p>4</p>
+      </div>
+      <div class="pagination-button">
+        <p>5</p>
+      </div>
+      <div class="pagination-button">
+        <p>Next</p>
+      </div>
+    </div>
+
+    <hr class="divider">
+    <div class="footer">
+      <div class="footer-section">
+        <p>writings.dev, reproduced by</p>
+        <a class="social-button" href="https://github.com/willbowden">
+          @willbowden
+        </a>
+      </div>
+      <div>
+        <a class="social-button"
+          href="https://www.figma.com/design/nh0V05z3NB87ue9v5PcO3R/writings.dev?node-id=41-95&t=je38GxXuZmOWU7wf-0">
+          View Original</a>
+      </div>
+    </div>
   </div>
 </body>
 
