Generate cards and pagination buttons dynamically

--- a/interactivity/writings.dev/index.html
+++ b/interactivity/writings.dev/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="title">
-      <img src="quill.png" id="quill">
+      <img src="images/quill.png" id="quill">
       <h1>Writings for Developers</h1>
       <h2>Curated collection of articles for busy developers</h2>
     </div>
@@ -50,147 +50,9 @@
     </div>
 
     <div class="cards-container">
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          <img src="splash.jpeg">
-          <h3>Build continuous integration pipelines with GitHub Actions</h3>
-          <p>GitHub Actions provide a really powerful way to integrate continuous integration and delivery into your
-            applications.</p>
-          <div class="card-footer">
-            <p>June 24, 2022</p>
-            <p>•</p>
-            <p>DevOps</p>
-          </div>
-        </div>
-      </div>
     </div>
 
     <div class="pagination">
-      <div class="pagination-button" previous>
-        <p>Previous</p>
-      </div>
-      <li class="pagination-button">
-        <p>1</p>
-      </li>
-      <li class="pagination-button current-page">
-        <p>2</p>
-      </li>
-      <li class="pagination-button">
-        <p>3</p>
-      </li>
-      <li class="pagination-button">
-        <p>4</p>
-      </li>
-      <li class="pagination-button">
-        <p>5</p>
-      </li>
-      <div class="pagination-button" next>
-        <p>Next</p>
-      </div>
     </div>
 
     <hr class="divider">
