Drag to scroll almost finished

--- a/interactivity/writings.dev/index.html
+++ b/interactivity/writings.dev/index.html
@@ -47,6 +47,8 @@
       <p>Architecture</p>
       <p>Scalability</p>
       <p>Explainers</p>
+      <p>Transformers</p>
+      <p>Data Science</p>
     </div>
 
     <div class="cards-container">
